--- a/Sudoku.ipynb
+++ b/Sudoku.ipynb
@@ -45,16 +45,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4f076ea2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "id": "bc97edc3",
    "metadata": {},
    "outputs": [],
@@ -82,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "6b9fa54d",
    "metadata": {},
    "outputs": [],
@@ -122,7 +112,7 @@
     "def findEmpty(grid):\n",
     "    for row in range(len(grid)):\n",
     "        for col in range(len(grid[0])):\n",
-    "            if grid[row][col] ==R 0:\n",
+    "            if grid[row][col] == 0:\n",
     "                return (row, col)\n",
     "    return None"
    ]
@@ -262,34 +252,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "633dbc0f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5 3 4  | 6 7 8  | 9 1 2\n",
-      "6 7 2  | 1 9 5  | 3 4 8\n",
-      "1 9 8  | 3 4 2  | 5 6 7\n",
-      "- - - - - - - - - - - -\n",
-      "8 5 9  | 7 6 1  | 4 2 3\n",
-      "4 2 6  | 8 5 3  | 7 9 1\n",
-      "7 1 3  | 9 2 4  | 8 5 6\n",
-      "- - - - - - - - - - - -\n",
-      "9 6 1  | 5 3 7  | 2 8 4\n",
-      "2 8 7  | 4 1 9  | 6 3 5\n",
-      "3 4 5  | 2 8 6  | 1 7 9\n"
-     ]
-    }
-   ],
-   "source": [
-    "printGrid(grid)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
    "id": "47ae6bf8",
    "metadata": {},
    "outputs": [],
@@ -310,7 +272,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a1ce8733",
+   "id": "633dbc0f",
    "metadata": {},
    "outputs": [
     {
